After Centering CSS

--- a/About.html
+++ b/About.html
@@ -13,12 +13,12 @@
  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-   <link rel="stylesheet" type="text/css" href="./css"></script>
+   <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
 <!-- BEGINNING-->
-  <section>
  <!--Navigation Bar-->
+ <div class="content">
 <div class="navigation-bar">
 <ul class="nav navbar-nav">
   <li><a href="home.html">HOME</a></li>
@@ -30,81 +30,24 @@
 </ul>
 </div><!--navigation-->
 
-  
-  <div ="container">
-    <div id="about">
+
+    <div class="about-title">
       <h1><b>a bit about me...</b></h1>
+    </div>
       <br>
       <br>
       <br>
+      <div class="about-text">
       <p>Lorem ipsum dolor sit amet, clita scaevola accusata ad vis, id eam dictas nominati tractatos. Mea cu tollit convenire persequeris. Nec malis ocurreret id, sit erat sensibus ad. Ut nisl wisi nihil vix, qui quaeque voluptatibus ea.<p/>
 
       <p>Pro ad rebum atqui doming. Fabulas sapientem sea ne, ad ludus tincidunt scripserit pro, ea oratio corrumpit mei. Ea sonet constituto adipiscing has. Utinam aliquam definiebas mei an.</p>
 
       <p>Ex homero possim accumsan vis. Soluta bonorum omittantur cu duo. Harum aliquid mel an, vidisse invidunt eum ea, pro minim definitiones eu. Ut nec erat deleniti, ei duo suavitate tincidun. Pro audire perpetua necessitatibus in, eu vocibus adipisci eos. No nec esse adhuc legendos, vim sumo nostrum recusabo ei.</p></div>
 
+</div>  
 </div>
-</div>    
-</div>
-
-<style>
- 
-body {
-  margin-left:300px;
-  margin-right: 300px;
-}
-
-  @font-face {
-    font-family: axis.bold;
-    src: url (axis.bold.otf);
-  }
- 
-   .header {
- 
-      color: black;,
-      margin-top: 80px;
-      margin-bottom: 30px;
-      font-family: axis.bold;
-    }
- 
- 
-
-   
-    h1 {
-      font-size: 80px;
-      margin-top:30px;
-      margin-bottom: 10px;
-      font-family: axis.bold;
-      text-align: center;
-    }
-
-
-    h4 {
-      margin-right: 0px;
-    }
- 
-
-  }
-
-   h3 {
-    margin-top: 30px;
-   }
- 
-   .navigation-bar {
-   margin-left:100px;
-   text-align: center;
-   display: inline-block; 
-   } 
-
-    .nav a {
-    color: black;
-   }
-  
 
  
- 
-    </style>
-    </section>
          <footer>
         </footer>
 
