--- a/Contact.html
+++ b/Contact.html
@@ -13,22 +13,21 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-   <link rel="stylesheet" type="text/css" href="./css"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
  
  
     <body>
 <!--HEADER-->
-<section>
-<header>
-  <div class="header">
-      <div id="name">
-      <h1><center><b>APRIL WRIGHT</center></b></h1>
-    </div><!--Name-->
-  </header><!--Header-->
-      <div id="description">
-      <h4><center>writer. web developer. educator</center></h4>
-      </div><!--Description-->
+  <div class ="content">
+    <div class="contact-title">
+      <h1><b>APRIL WRIGHT</b></h1>
+    </div>
+    <br>
+    <div class="contact-logo">
+      <h3>writer. web developer. bicyclist</h3>
+    </div>
+     </header>
 
  
  <!--Navigation Bar-->
@@ -45,76 +44,15 @@
 
   
 <!--CCONTACT-->
-  <div id="contact-text">
-<h3><center>Got something to say or ask? Get in touch!</center></h3>
-</div>
-<div id="contact-email">
-<h4><b><i>aprilwright.csr@gmail.com</i></b></h4>
-</div>
-
- 
-<!--CSS STYLING-->
-<style>
- 
-body {
-  margin-left:300px;
-  margin-right: 300px;
-}
-
-  @font-face {
-    font-family: axis.bold;
-    src: url (axis.bold.otf);
-  }
- 
-   .header {
- 
-      color: black;,
-      margin-top: 80px;
-      margin-bottom: 30px;
-      font-family: axis.bold;
-    }
-
-   
-    h1 {
-      font-size: 80px;
-      margin-top:30px;
-      margin-bottom: 30px;
-      font-family: axis.bold;
-      text-align: center;
-    }
- 
-
-
-   #contact-text h3 {
-    margin-top: 80px;
-    text-align: center;
-    }
- 
-    .navigation-bar {
-   margin-left: 110px;
-   padding-bottom: 100px;
-   padding-top: 20px;
-   } 
-
-   .nav a {
-    color: black;
-    display: inline-block;
-   }
-
-   #contact-email h4 {
-    margin-left: 40px;
-    text-align: center;
-   }
-  
-
-  </style>
-    </section>
-
+  <div class="contact-text">
+     <h3>Got something to say or ask? Get in touch!</h3>
+  </div><!--CONTACT-TEXT-->
+  <div class="contact-email">
+    <h4><b><i>aprilwright.csr@gmail.com</i></b></h4>
+  </div><!--CONTACT-EMAIL-->
+ </div><!--CONTENT-->
+  <footer>
   </footer>
-  </div>
-</div>
-</div>   
-</div>
     </body>
  
 </html>
