--- a/Extra.html
+++ b/Extra.html
@@ -13,23 +13,18 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-   <link rel="stylesheet" type="text/css" href="./css"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
   </head>
  
  
     <body>
 <!--HEADER-->
-<section>
-<section>
-<header>
-  <div class="header">
-      <div id="opening">
-    <!--Opening-->
-      <h1><center><b>APRIL WRIGHT</center></b></h1>
+<div class="content">
+    <header>
+      <h1><b>APRIL WRIGHT</b></h1>
       <br>
-      <h4><center>writer. web developer. educator</center></h4>
-      </div><!--opening-->
-  </div>
+      <div class="extra-logo">
+      <h3>writer. web developer. bicyclist</h3>
  </header><!--page header-->
  
  <!--Navigation Bar-->
@@ -43,70 +38,13 @@
    <li><a href="contact.html">CONTACT</a></li>
 </ul>
 </div><!--navigation-->
+</div><!--CONTENT-->
 
   
   
  
  
-<!--CSS STYLING-->
-<style>
- 
-  body {
-  margin-left:300px;
-  margin-right: 300px;
-}
 
-  @font-face {
-    font-family: axis.bold;
-    src: url (axis.bold.otf);
-  }
- 
-   .header {
- 
-      color: black;,
-      margin-top: 80px;
-      margin-bottom: 30px;
-      font-family: axis.bold;
-    }
- 
- 
-
-   
-    h1 {
-      font-size: 80px;
-      margin-top:30px;
-      margin-bottom: 10px;
-      font-family: axis.bold;
-      text-align: center;
-    }
-
-
-    h4 {
-      margin-right: 0px;
-    }
- 
-
-  
- 
-   .navigation-bar {
-   margin-left: 110px;
-   } 
-
-   .nav a {
-    color: black;
-    display: inline-block;
-   }
-  
-
- 
-    </style>
-    </section>
-
-  </footer>
-  </div>
-</div>
-</div>   
-</div>
     </body>
  
 </html>
