--- a/Home.html
+++ b/Home.html
@@ -13,24 +13,21 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="./css"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
   </head>
- 
+
  
     <body>
 <!--HEADER-->
-<section>
-<header>
-  <div class="header">
-      <div id="opening">
-    <!--Opening-->
-      <h1><center><b>APRIL WRIGHT</center></b></h1>
+  <div class="content">
+    <header>
+      <div class="home-title">
+      <h1><b>APRIL WRIGHT</b></h1>
+      </div>
       <br>
-      <h4><center>writer. web developer. educator</center></h4>
-      </div><!--opening-->
-  </div>
+      <h3><center>writer. web developer. bicyclist</center></h3>
  </header><!--page header-->
- 
+
  <!--Navigation Bar-->
 <div class="navigation-bar">
 <ul class="nav navbar-nav">
@@ -41,72 +38,11 @@
    <li><a href="contact.html">CONTACT</a></li>
 </ul>
 </div><!--navigation-->
-
+</div><!--CONTENT-->
   
- 
- 
-<!--CSS STYLING-->
-<style>
- 
-body {
-  margin-left:300px;
-  margin-right: 300px;
-}
-
-  @font-face {
-    font-family: axis.bold;
-    src: url (axis.bold.otf);
-  }
- 
-   .header {
- 
-      color: black;,
-      margin-top: 80px;
-      margin-bottom: 30px;
-      font-family: axis.bold;
-    }
- 
- 
-
-   
-    h1 {
-      font-size: 80px;
-      margin-top:30px;
-      margin-bottom: 10px;
-      font-family: axis.bold;
-      text-align: center;
-    }
-
-
-    h4 {
-      margin-right: 0px;
-    }
- 
-    .navigation-bar {
-      margin-left: 150px;
-
-   } 
-
-   .nav a {
-    color: black;
-    display: inline-block;
-    text-align: center;
-   }
-
-  
-
-  
- 
- 
- 
-    </style>
-    </section>
-
+  <footer>
   </footer>
-  </div>
-</div>
-</div>   
-</div>
+
     </body>
  
 </html>
