--- a/The Work.html
+++ b/The Work.html
@@ -13,19 +13,20 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-   <link rel="stylesheet" type="text/css" href="./css"></script>
+   <link rel="stylesheet" type="text/css" href="style.css">
   </head>
  
  
     <body>
 <!--HEADER-->
-  <header>
       <div class="content">
-    <!--Opening-->
-      <h1><center><b>APRIL WRIGHT</center></b></h1>
+        <header>
+      <div class="work-title">
+      <h1><b>APRIL WRIGHT</b></h1>
+    </div>
       <br>
-      <h4><center>writer. web developer. educator</center></h4>
-      </div><!--opening-->
+      <div class="work-logo">
+      <h3>writer. web developer. bicyclist</h3>
   </header>
  <!--Navigation Bar-->
 <div class="navigation-bar">
@@ -40,65 +41,9 @@
 </div><!--navigation-->
 </div>
   
- 
- 
-<!--CSS STYLING-->
-<style>
- 
+ <footer>
+ </footer>
 
-body {
-  margin-left:300px;
-  margin-right: 300px;
-}
-
-  @font-face {
-    font-family: axis.bold;
-    src: url (axis.bold.otf);
-  }
- 
-   .header {
- 
-      color: black;,
-      margin-top: 80px;
-      margin-bottom: 30px;
-      font-family: axis.bold;
-    }
- 
- 
-
-   
-    h1 {
-      font-size: 80px;
-      margin-top:30px;
-      margin-bottom: 10px;
-      font-family: axis.bold;
-      text-align: center;
-    }
-
-
-    h4 {
-      margin-right: 0px;
-    }
- 
-     .navigation-bar {
-   margin-left: 110px;
-   } 
-
-   .nav a {
-    color: black;
-    display: inline-block;
-   }
-  
-  
- 
-    </style>
-    </section>
-
-  </footer>
-  </div>
-</div>
-</div>   
-</div>
     </body>
  
 </html>
