After Top Navbar

--- a/About.html
+++ b/About.html
@@ -17,25 +17,37 @@
   </head>
 
 <!-- BEGINNING-->
- <!--Navigation Bar-->
- <div class="content">
-<div class="navigation-bar">
-<ul class="nav navbar-nav">
-  <li><a href="home.html">HOME</a></li>
+<body>
+
+  <div class="content">
+
+<!--NAVIGATION BAR-->
+   <div class="navbar navbar-default navbar-fixed-top">
+    <ul class="nav navbar-nav">
+   <li><a href="home.html">HOME</a></li>
    <li><a href="about.html">ABOUT</a></li>
    <li><a href="the work.html">THE WORK</a></li>
    <li><a href="writings.html">WRITINGS</a></li>
    <li><a href="extra.html">EXTRA</a></li>
    <li><a href="contact.html">CONTACT</a></li>
 </ul>
-</div><!--navigation-->
+</div><!--NAVIGATION-->
+<!--HEADLINE-->
+    <header>
+      <div class="title">
+      <h1><b>APRIL WRIGHT</b></h1>
+      </div>
+      <br>
+      <div class="tagline">
+      <h3>writer. web developer. bicyclist</h3>
+    </div>
+ </header>
 
 
+<!--ABOUT CONTENT-->
     <div class="about-title">
       <h1><b>a bit about me...</b></h1>
     </div>
-      <br>
-      <br>
       <br>
       <div class="about-text">
       <p>Lorem ipsum dolor sit amet, clita scaevola accusata ad vis, id eam dictas nominati tractatos. Mea cu tollit convenire persequeris. Nec malis ocurreret id, sit erat sensibus ad. Ut nisl wisi nihil vix, qui quaeque voluptatibus ea.<p/>
@@ -44,8 +56,8 @@
 
       <p>Ex homero possim accumsan vis. Soluta bonorum omittantur cu duo. Harum aliquid mel an, vidisse invidunt eum ea, pro minim definitiones eu. Ut nec erat deleniti, ei duo suavitate tincidun. Pro audire perpetua necessitatibus in, eu vocibus adipisci eos. No nec esse adhuc legendos, vim sumo nostrum recusabo ei.</p></div>
 
-</div>  
-</div>
+</div>  <!--ABOUT-->
+</div>< <!--CONTENT-->
 
  
          <footer>
