--- a/Home.html
+++ b/Home.html
@@ -18,26 +18,30 @@
 
  
     <body>
-<!--HEADER-->
   <div class="content">
-    <header>
-      <div class="home-title">
-      <h1><b>APRIL WRIGHT</b></h1>
-      </div>
-      <br>
-      <h3><center>writer. web developer. bicyclist</center></h3>
- </header><!--page header-->
-
- <!--Navigation Bar-->
-<div class="navigation-bar">
-<ul class="nav navbar-nav">
+    <!--NAVIGATION-->
+    <div class="navbar navbar-default navbar-fixed-top">
+    <ul class="nav navbar-nav">
+   <li><a href="home.html">HOME</a></li>
    <li><a href="about.html">ABOUT</a></li>
    <li><a href="the work.html">THE WORK</a></li>
    <li><a href="writings.html">WRITINGS</a></li>
    <li><a href="extra.html">EXTRA</a></li>
    <li><a href="contact.html">CONTACT</a></li>
 </ul>
-</div><!--navigation-->
+</div><!--NAVIGATION-->
+
+<!--HEADLINE-->
+    <header>
+      <div class="title">
+      <h1><b>APRIL WRIGHT</b></h1>
+      </div>
+      <br>
+      <div class="tagline">
+      <h3><center>writer. web developer. bicyclist</center></h3>
+    </div>
+ </header><!--page header-->
+
 </div><!--CONTENT-->
   
   <footer>
