--- a/Images/Writings.html
+++ b/Images/Writings.html
@@ -7,55 +7,42 @@
 <meta name="keywords" content="Women coders, women in technology, women programmers">
 <meta name="keywords" content="Coding,programming, time management, planning, productivity,feminisim, learning, self-teaching, self-taught, computer programming"> 
  
-<title>April Wright || </title>
+<title>April Wright</title>
  
 <!-- Bootstrap -->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   </head>
  
  
     <body>
-
-  <div class ="content">
-
-    <!--NAVIGATION BAR-->
-   <div class="navbar navbar-default navbar-fixed-top">
-    <ul class="nav navbar-nav">
-   <li><a href="home.html">HOME</a></li>
+  <div class="content">
+    <header>
+      <h1><b>APRIL WRIGHT</b></h1>
+      <br>
+      <div class="writings-logo">
+        <p>
+      <h3>writer. web developer. bicyclist</h3>
+    </p></div>
+ </header><!--page header-->
+ 
+ <!--Navigation Bar-->
+<div class="navigation-bar">
+<ul class="nav navbar-nav">
+  <li><a href="home.html">HOME</a></li>
    <li><a href="about.html">ABOUT</a></li>
    <li><a href="the work.html">THE WORK</a></li>
    <li><a href="writings.html">WRITINGS</a></li>
    <li><a href="extra.html">EXTRA</a></li>
    <li><a href="contact.html">CONTACT</a></li>
 </ul>
-</div><!--NAVIGATION-->
+</div><!--navigation-->
+</div><!--CONTENT-->
+  
+ 
 
-<!--HEADLINE-->
-<header>
-    <div class="title">
-      <h1><b>APRIL WRIGHT</b></h1>
-    </div>
-    <br>
-    <div class="tagline">
-      <h3>writer. web developer. bicyclist</h3>
-    </div>
-   </header>
-
-<!--CCONTACT-->
-  <div class="contact-text">
-     <h3>Got something to say or ask? Get in touch!</h3>
-  </div><!--CONTACT-TEXT-->
-  <div class="contact-email">
-    <h4><b><i>aprilwright.csr@gmail.com</i></b></h4>
-  </div><!--CONTACT-EMAIL-->
-
-
- </div><!--CONTENT-->
-  <footer>
-  </footer>
     </body>
  
 </html>
