--- a/The Work.html
+++ b/The Work.html
@@ -18,28 +18,34 @@
  
  
     <body>
-<!--HEADER-->
+
       <div class="content">
-        <header>
-      <div class="work-title">
-      <h1><b>APRIL WRIGHT</b></h1>
-    </div>
-      <br>
-      <div class="work-logo">
-      <h3>writer. web developer. bicyclist</h3>
-  </header>
- <!--Navigation Bar-->
-<div class="navigation-bar">
-<ul class="nav navbar-nav">
-  <li><a href="home.html">HOME</a></li>
+        <!--NAVIGATION-->
+    <div class="content">
+    <div class="navbar navbar-default navbar-fixed-top">
+    <ul class="nav navbar-nav">
+   <li><a href="home.html">HOME</a></li>
    <li><a href="about.html">ABOUT</a></li>
    <li><a href="the work.html">THE WORK</a></li>
    <li><a href="writings.html">WRITINGS</a></li>
    <li><a href="extra.html">EXTRA</a></li>
    <li><a href="contact.html">CONTACT</a></li>
-</ul>
-</div><!--navigation-->
-</div>
+      </ul>
+      </div><!--NAVIGATION-->
+
+    <!--HEADLINES-->
+    <header>
+      <div class="title">
+      <h1><b>APRIL WRIGHT</b></h1>
+    </div>
+      <br>
+      <div class="tagline">
+      <h3>writer. web developer. bicyclist</h3>
+    </div>
+  </header>
+
+
+</div><!--CONTENT-->
   
  <footer>
  </footer>
