--- a/Writings.html
+++ b/Writings.html
@@ -19,26 +19,31 @@
  
     <body>
   <div class="content">
-    <header>
-      <h1><b>APRIL WRIGHT</b></h1>
-      <br>
-      <div class="writings-logo">
-        <p>
-      <h3>writer. web developer. bicyclist</h3>
-    </p></div>
- </header><!--page header-->
- 
- <!--Navigation Bar-->
-<div class="navigation-bar">
-<ul class="nav navbar-nav">
-  <li><a href="home.html">HOME</a></li>
+        <!--NAVIGATION-->
+    <div class="content">
+    <div class="navbar navbar-default navbar-fixed-top">
+    <ul class="nav navbar-nav">
+   <li><a href="home.html">HOME</a></li>
    <li><a href="about.html">ABOUT</a></li>
    <li><a href="the work.html">THE WORK</a></li>
    <li><a href="writings.html">WRITINGS</a></li>
    <li><a href="extra.html">EXTRA</a></li>
    <li><a href="contact.html">CONTACT</a></li>
-</ul>
-</div><!--navigation-->
+      </ul>
+      </div>
+ 
+   
+
+   <!--HEADLINE-->
+   <header>
+      <div class="title">
+      <h1><b>APRIL WRIGHT</b></h1></div>
+      <br>
+      <div class="tagline">
+      <h3>writer. web developer. bicyclist</h3>
+      </div>
+ </header><!--page header-->
+ 
 </div><!--CONTENT-->
   
  
