After Orange Title

--- a/Extra.html
+++ b/Extra.html
@@ -14,6 +14,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid Sans">
   </head>
  
  
@@ -37,10 +38,10 @@
       <!--HEADLINE-->
     <header>
       <div class="title">
-      <h1><b>APRIL WRIGHT</b></h1></div>
+      <h1><b>April Wright</b></h1></div>
       <br>
       <div class="tagline">
-      <h3>writer. web developer. bicyclist</h3>
+      <h3>writer / web developer / bicyclist</h3>
     </div>
  </header><!--page header-->
  
