--- a/Home.html
+++ b/Home.html
@@ -10,10 +10,12 @@
 <title>April Wright</title>
  
 <!-- Bootstrap -->
+  <head>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid Sans">
   </head>
 
  
@@ -34,11 +36,11 @@
 <!--HEADLINE-->
     <header>
       <div class="title">
-      <h1><b>APRIL WRIGHT</b></h1>
+      <h1>April Wright</h1>
       </div>
       <br>
       <div class="tagline">
-      <h3><center>writer. web developer. bicyclist</center></h3>
+      <h3>writer / web developer / bicyclist</h3>
     </div>
  </header><!--page header-->
 
