--- a/About.html
+++ b/About.html
@@ -14,6 +14,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
    <link rel="stylesheet" type="text/css" href="style.css">
+   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid Sans">
   </head>
 
 <!-- BEGINNING-->
@@ -32,23 +33,11 @@
    <li><a href="contact.html">CONTACT</a></li>
 </ul>
 </div><!--NAVIGATION-->
-<!--HEADLINE-->
+<!--ABOUT HEADLINE-->
     <header>
-      <div class="title">
-      <h1><b>APRIL WRIGHT</b></h1>
-      </div>
-      <br>
-      <div class="tagline">
-      <h3>writer. web developer. bicyclist</h3>
-    </div>
- </header>
-
-
-<!--ABOUT CONTENT-->
     <div class="about-title">
-      <h1><b>a bit about me...</b></h1>
+      <h2>a bit about me...</h2>
     </div>
-      <br>
       <div class="about-text">
       <p>Lorem ipsum dolor sit amet, clita scaevola accusata ad vis, id eam dictas nominati tractatos. Mea cu tollit convenire persequeris. Nec malis ocurreret id, sit erat sensibus ad. Ut nisl wisi nihil vix, qui quaeque voluptatibus ea.<p/>
 
@@ -57,6 +46,7 @@
       <p>Ex homero possim accumsan vis. Soluta bonorum omittantur cu duo. Harum aliquid mel an, vidisse invidunt eum ea, pro minim definitiones eu. Ut nec erat deleniti, ei duo suavitate tincidun. Pro audire perpetua necessitatibus in, eu vocibus adipisci eos. No nec esse adhuc legendos, vim sumo nostrum recusabo ei.</p></div>
 
 </div>  <!--ABOUT-->
+</header>
 </div>< <!--CONTENT-->
 
  
