New Home Look with Photo

--- a/Home.html
+++ b/Home.html
@@ -22,8 +22,8 @@
     <body>
   <div class="content">
     <!--NAVIGATION-->
-    <div class="navbar navbar-default navbar-fixed-top">
-    <ul class="nav navbar-nav">
+    <div class="top-nav">
+    <ul class="nav">
    <li><a href="home.html">HOME</a></li>
    <li><a href="about.html">ABOUT</a></li>
    <li><a href="the work.html">THE WORK</a></li>
@@ -35,14 +35,21 @@
 
 <!--HEADLINE-->
     <header>
-      <div class="title">
+      <div class="home-title">
       <h1>April Wright</h1>
       </div>
       <br>
       <div class="tagline">
-      <h3>writer / web developer / bicyclist</h3>
+      <h3>web developer / bicyclist / eternal student</h3>
     </div>
  </header><!--page header-->
+
+<!--PROFILE PHOTO-->
+<div class="photo">
+ <p>
+ <img src="images/blue6.jpg" alt="profile photo" />
+</p>
+</div>
 
 </div><!--CONTENT-->
   
