--- a/Home.html
+++ b/Home.html
@@ -44,13 +44,14 @@
  </header><!--page header-->
 
 <!--PROFILE PHOTO-->
+<div class="container">
 <div class="photo">
  <p>
  <img src="images/blue6.jpg" alt="profile photo" />
 </p>
 </div>
 
-</div><!--CONTENT-->
+</div><!--CONTAINER-->
   
   <footer>
   </footer>
