--- a/About.html
+++ b/About.html
@@ -25,11 +25,11 @@
 <!--NAVIGATION BAR-->
    <div class="navbar navbar-default navbar-fixed-top">
     <ul class="nav navbar-nav">
-   <li><a href="home.html">HOME</a></li>
-   <li><a href="about.html">ABOUT</a></li>
-   <li><a href="the work.html">THE WORK</a></li>
-   <li><a href="writings.html">WRITINGS</a></li>
-   <li><a href="extra.html">EXTRA</a></li>
+   <li><a href="home.html">HOME |</a></li>
+   <li><a href="about.html">ABOUT |</a></li>
+   <li><a href="the work.html">THE WORK |</a></li>
+   <li><a href="writings.html">BlOG |</a></li>
+   <li><a href="extra.html">EXTRA |</a></li>
    <li><a href="contact.html">CONTACT</a></li>
 </ul>
 </div><!--NAVIGATION-->
