--- a/About.html
+++ b/About.html
@@ -36,14 +36,15 @@
 <!--ABOUT HEADLINE-->
     <header>
     <div class="about-title">
-      <h2>a bit about me...</h2>
+         <h2>a bit about me...</h2>
     </div>
       <div class="about-text">
-      <p>Lorem ipsum dolor sit amet, clita scaevola accusata ad vis, id eam dictas nominati tractatos. Mea cu tollit convenire persequeris. Nec malis ocurreret id, sit erat sensibus ad. Ut nisl wisi nihil vix, qui quaeque voluptatibus ea.<p/>
+                  <p>Lorem ipsum dolor sit amet, clita scaevola accusata ad vis, id eam dictas nominati tractatos. Mea cu                       tollit convenire persequeris. Nec malis ocurreret id, sit erat sensibus ad. Ut nisl wisi nihil vix, qui                       quaeque voluptatibus ea.<p/>
 
-      <p>Pro ad rebum atqui doming. Fabulas sapientem sea ne, ad ludus tincidunt scripserit pro, ea oratio corrumpit mei. Ea sonet constituto adipiscing has. Utinam aliquam definiebas mei an.</p>
+                   <p>Pro ad rebum atqui doming. Fabulas sapientem sea ne, ad ludus tincidunt scripserit pro, ea oratio                         corrumpit mei. Ea sonet constituto adipiscing has. Utinam aliquam definiebas mei an.</p>
 
-      <p>Ex homero possim accumsan vis. Soluta bonorum omittantur cu duo. Harum aliquid mel an, vidisse invidunt eum ea, pro minim definitiones eu. Ut nec erat deleniti, ei duo suavitate tincidun. Pro audire perpetua necessitatibus in, eu vocibus adipisci eos. No nec esse adhuc legendos, vim sumo nostrum recusabo ei.</p></div>
+                  <p>Ex homero possim accumsan vis. Soluta bonorum omittantur cu duo. Harum aliquid mel an, vidisse invidunt                   eum ea, pro minim definitiones eu. Ut nec erat deleniti, ei duo suavitate tincidun. Pro audire perpetua                      necessitatibus in, eu vocibus adipisci eos. No nec esse o nostrum recusabo ei.</>
+                  </div>
 
 </div>  <!--ABOUT-->
 </header>
