Replaced with Blog

--- a/Contact.html
+++ b/Contact.html
@@ -20,7 +20,7 @@
  
     <body>
 
-  <div class ="content">
+  <div class ="container">
 
     <!--NAVIGATION BAR-->
    <div class="navbar navbar-default navbar-fixed-top">
@@ -28,7 +28,7 @@
    <li><a href="home.html">HOME</a></li>
    <li><a href="about.html">ABOUT</a></li>
    <li><a href="the work.html">THE WORK</a></li>
-   <li><a href="writings.html">WRITINGS</a></li>
+   <li><a href="blog.html">BLOG</a></li>
    <li><a href="extra.html">EXTRA</a></li>
    <li><a href="contact.html">CONTACT</a></li>
 </ul>
@@ -38,10 +38,6 @@
 <header>
     <div class="title">
       <h1><b>April Wright</b></h1>
-    </div>
-    <br>
-    <div class="tagline">
-      <h3>writer / web developer / bicyclist</h3>
     </div>
    </header>
 
@@ -54,7 +50,7 @@
   </div><!--CONTACT-EMAIL-->
 
 
- </div><!--CONTENT-->
+ </div><!--CONTAINER-->
   <footer>
   </footer>
     </body>
