--- a/Home.html
+++ b/Home.html
@@ -19,17 +19,19 @@
 
  
     <body>
-  <div class="content">
-    <!--NAVIGATION-->
-    <div class="top-nav">
-    <ul class="nav">
-   <li><a href="home.html">HOME</a></li>
-   <li><a href="about.html">ABOUT</a></li>
-   <li><a href="the work.html">THE WORK</a></li>
-   <li><a href="writings.html">WRITINGS</a></li>
-   <li><a href="extra.html">EXTRA</a></li>
-   <li><a href="contact.html">CONTACT</a></li>
-</ul>
+
+    <div class="container">
+        <!--NAVIGATION-->
+    <div class="navbar navbar-default navbar-fixed-top">
+      <ul class="nav navbar-nav">
+          <li><a href="home.html">HOME</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="the work.html">THE WORK</a></li>
+          <li><a href="blog.html">BLOG</a></li>
+          <li><a href="extra.html">EXTRA</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+      </ul>
+    </div><!--NAVIGATION-->
 </div><!--NAVIGATION-->
 
 <!--HEADLINE-->
@@ -37,18 +39,7 @@
       <div class="home-title">
       <h1>April Wright</h1>
       </div>
-      <br>
-      <div class="tagline">
-      <h3>web developer / bicyclist / eternal student</h3>
-    </div>
- </header><!--page header-->
-
-<!--PROFILE PHOTO-->
-<div class="photo">
- <p>
- <img src="images/blue6.jpg" alt="profile photo" />
-</p>
-</div>
+  </header><!--page header-->
 
 </div><!--CONTAINER-->
   
