--- a/About.html
+++ b/About.html
@@ -20,35 +20,32 @@
 <!-- BEGINNING-->
 <body>
 
-  <div class="content">
+  <div class="container">
 
 <!--NAVIGATION BAR-->
    <div class="navbar navbar-default navbar-fixed-top">
     <ul class="nav navbar-nav">
-   <li><a href="home.html">HOME |</a></li>
-   <li><a href="about.html">ABOUT |</a></li>
-   <li><a href="the work.html">THE WORK |</a></li>
-   <li><a href="writings.html">BlOG |</a></li>
-   <li><a href="extra.html">EXTRA |</a></li>
+   <li><a href="home.html">HOME</a></li>
+   <li><a href="about.html">ABOUT</a></li>
+   <li><a href="the work.html">THE WORK</a></li>
+   <li><a href="blog.html">BlOG</a></li>
+   <li><a href="extra.html">EXTRA</a></li>
    <li><a href="contact.html">CONTACT</a></li>
 </ul>
 </div><!--NAVIGATION-->
 <!--ABOUT HEADLINE-->
-    <header>
-    <div class="about-title">
-         <h2>a bit about me...</h2>
-    </div>
+
       <div class="about-text">
                   <p>Lorem ipsum dolor sit amet, clita scaevola accusata ad vis, id eam dictas nominati tractatos. Mea cu                       tollit convenire persequeris. Nec malis ocurreret id, sit erat sensibus ad. Ut nisl wisi nihil vix, qui                       quaeque voluptatibus ea.<p/>
 
                    <p>Pro ad rebum atqui doming. Fabulas sapientem sea ne, ad ludus tincidunt scripserit pro, ea oratio                         corrumpit mei. Ea sonet constituto adipiscing has. Utinam aliquam definiebas mei an.</p>
 
-                  <p>Ex homero possim accumsan vis. Soluta bonorum omittantur cu duo. Harum aliquid mel an, vidisse invidunt                   eum ea, pro minim definitiones eu. Ut nec erat deleniti, ei duo suavitate tincidun. Pro audire perpetua                      necessitatibus in, eu vocibus adipisci eos. No nec esse o nostrum recusabo ei.</>
-                  </div>
+        <!--NAVIGATION-->
+                  <p>Ex homero possim accumsan vis. Soluta bonorum omittantur cu duo. Harum aliquid mel an, vidisse invidunt                   eum ea, pro minim definitiones eu. Ut nec erat deleniti, ei duo suavitate tincidun. Pro audire perpetua                      necessitatibus in, eu vocibus adipisci eos. No nec esse o nostrum recusabo ei.</p>
+         
 
 </div>  <!--ABOUT-->
-</header>
-</div>< <!--CONTENT-->
+</div> <!--CONTAINER-->
 
  
          <footer>
