--- a/Extra.html
+++ b/Extra.html
@@ -20,7 +20,7 @@
  
     <body>
 
-    <div class="content">
+    <div class="container">
 
         <!--NAVIGATION-->
     <div class="content">
@@ -29,7 +29,7 @@
     <li><a href="home.html">HOME</a></li>
    <li><a href="about.html">ABOUT</a></li>
    <li><a href="the work.html">THE WORK</a></li>
-   <li><a href="writings.html">WRITINGS</a></li>
+   <li><a href="blog.html">BLOG</a></li>
    <li><a href="extra.html">EXTRA</a></li>
    <li><a href="contact.html">CONTACT</a></li>
       </ul>
@@ -45,7 +45,7 @@
     </div>
  </header><!--page header-->
  
-</div><!--CONTENT-->
+</div><!--CONTAINER-->
 
   
   
