--- a/Writings.html
+++ b/Writings.html
@@ -27,7 +27,7 @@
    <li><a href="home.html">HOME</a></li>
    <li><a href="about.html">ABOUT</a></li>
    <li><a href="the work.html">THE WORK</a></li>
-   <li><a href="writings.html">WRITINGS</a></li>
+   <li><a href="blog.html">BLOG</a></li>
    <li><a href="extra.html">EXTRA</a></li>
    <li><a href="contact.html">CONTACT</a></li>
       </ul>
